--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,29 @@
-version: "3.7"
-services:
+version: '3.7'
 
-  app:
-    container_name: flask_api
+services:
+  api:
+    container_name: etcetera_api
     build:
-      context: .
-      dockerfile: ./src/docker/Dockerfile
-    env_file: ./.env
+      context: ./services/api
+      dockerfile: ./docker/Dockerfile
+    command: python manage.py run -h 0.0.0.0
+    volumes:
+      - ./services/api/:/usr/src/app/
     ports:
       - 5000:5000
+    env_file:
+      - ./.env.dev
     depends_on:
-      - database
+      - db
+  db:
+    container_name: etcetera_db
+    image: postgres:12-alpine
     volumes:
-      - ./src:/opt/src
-
-  database:
-    container_name: postgres
-    env_file: ./.env
-    image: postgres:latest
-    ports:
-      - 5432:5432
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=etcetera
+      - POSTGRES_PASSWORD=etc689
+      - POSTGRES_DB=etcetera_dev
 
 volumes:
-    db_volume:
+  postgres_data:
